--- a/style.css
+++ b/style.css
@@ -1,20 +1,50 @@
 .title {
 	text-align: center;
-	color: blue;
-	background-color: lightgray;
+	color: yellow;
+	
+	padding: 20px 50px;
+	margin: 0px 500px;
 }
 
 .container1 {
-	background-image: url(image1.jpg);
-
+	background: url(image2.jpg) no-repeat center fixed;
+	background-size: cover;
+    height: 700px;
+    padding-top:60px;
+	margin-top: 50px;
 }
 
 p {
 	text-align: center;
 	font-size: 18px;
-
+	color: white;
+	font-family: 'Pangolin', cursive;
 }
 
-li:nth-child(2) {
-	float: right;
+body {
+    background-color: #ddd;
+    margin: 0;
+}
+nav {
+    background-color: #333333;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+nav ul{
+    margin: 0;
+    text-align: left;
+}
+nav li {
+    display: inline-block;
+}
+nav li a { 
+  line-height: 50px;
+  text-decoration: none;
+  color: #999;
+  font-size: 11px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 0 18px;
+  font-family: 'Roboto', sans-serif;
 }
