--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 .container1 {
 	background: url(image2.jpg) no-repeat center fixed;
 	background-size: cover;
-    height: 700px;
-    padding-top:60px;
+  height: 700px;
+  padding-top:60px;
 	margin-top: 50px;
 }
 
@@ -51,7 +51,28 @@ nav li a {
 
 .hero {
 	width: 100%;
-    max-width: 200px;
-    display: block;
-    margin: 0 auto;
+  max-width: 200px;
+  display: block;
+  margin: 0 auto;
+}
+
+.logo {
+  width: 100px;
+}
+
+.column {
+  float: left;
+  width: 33.333%;
+}
+.column-inner {
+    padding: 20px;
+}
+.repos img {
+  width: 100%;
+  margin: 0px;
+  padding: 5px;
+}
+
+.repotext {
+  color: white;
 }
