--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .title {
 	text-align: center;
-	color: yellow;
+	color: blue;
 	font-family: 'Pangolin', cursive;
 	padding: 20px 50px;
 	margin: 0px 500px;
@@ -13,7 +13,13 @@
   padding-top:60px;
 	margin-top: 50px;
 }
-
+.container2 {
+  background: url(images/backSocial2.jpeg) no-repeat center fixed;
+  background-size: cover;
+  height: 700px;
+  padding-top:60px;
+  margin-top: 50px;
+}
 p {
 	text-align: center;
 	font-size: 18px;
@@ -52,6 +58,17 @@ nav li a {
   font-weight: bold;
   padding: 0 18px;
   font-family: 'Roboto', sans-serif;
+}
+
+.in-line{
+  display: inline-block;
+}
+
+.center-list {
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
 }
 
 .hero {
