--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
 	text-align: center;
 	color: blue;
 	font-family: 'Pangolin', cursive;
-	padding: 20px 50px;
-	margin: 0px 500px;
 }
 
 .container1 {
@@ -28,8 +26,8 @@ p {
 }
 
 .description {
-  margin-left: 200px;
-  margin-right: 200px;  
+  margin-left: auto;
+  margin-right: auto;  
 }
 
 body {
@@ -97,4 +95,16 @@ nav li a {
 
 .repotext {
   color: white;
+}
+
+@media (max-width: 700px) {
+  .container1 {
+    width: 100%;
+  }
+  .container2 {
+    width: 100%;
+  }
+  .column {
+  width: 100%;
+}
 }
