--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container1 {
-	background: url(image2.jpg) no-repeat center fixed;
+	background: url(images/image2.jpg) no-repeat center fixed;
 	background-size: cover;
   height: 700px;
   padding-top:60px;
