--- a/style.css
+++ b/style.css
@@ -41,13 +41,14 @@ nav {
     top: 0;
 }
 nav ul{
-    margin: 0;
-    text-align: left;
+  margin: 0;
+  text-align: right;
 }
 nav li {
-    display: inline-block;
+  display: inline-block;
 }
 nav li a { 
+
   line-height: 50px;
   text-decoration: none;
   color: #999;
@@ -57,6 +58,20 @@ nav li a {
   padding: 0 18px;
   font-family: 'Roboto', sans-serif;
 }
+
+.nav-class {
+  float: left;
+  line-height: 50px;
+  text-decoration: none;
+  color: #999;
+  font-size: 11px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 0 18px;
+  font-family: 'Roboto', sans-serif;
+}
+}
+
 
 .in-line{
   display: inline-block;
