--- a/style.css
+++ b/style.css
@@ -128,30 +128,6 @@ li{
   .column {
   width: 100%;
   }
-
-}
-@media screen and (max-width:680px) {
-  .topnav li:not(:first-child) {display: none;}
-  .topnav li.icon {
-    float: right;
-    display: inline-block;
-  }
-
-@media screen and (max-width:680px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive li.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive li {
-    float: none;
-    display: inline;
-  }
-  .topnav.responsive li a {
-    display: block;
-    text-align: left;
-  }
+  .topnav li.right, 
+  .topnav li {float: none;}
 }
